--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -1,7 +1,8 @@
-@use '../base/mixins' as m;
 @use '../custom' as *;
+@use '../base/mixins' as m;
 
-body{
+
+body {
     background-image: url(../../build/Img/trama.avif)
 }
 
@@ -19,13 +20,16 @@ body{
     }
 
     .navbar-nav .nav-link {
-        color: #ffffff;
+        color: #f7f7f7 !important;
         font-size: 1.125rem;
         padding: 0.625rem 0.9375rem;
+        
     }
 
+   
+
     .navbar-nav .nav-link:hover {
-        color: #adb5bd;
+        color: $verde !important;
     }
 
     .form-control {
@@ -34,10 +38,20 @@ body{
         border-color: #ced4da;
     }
 
-    .btn-outline-light {
-        color: #ffffff;
-        border-color: #ffffff;
+    .dropdown-menu{
+        background-color: #343a4083;
     }
+    .dropdown-item {
+        color: $white;
+        font-weight: bold;
+
+        &:hover {
+            color: $dark;
+            background-color: $verde;
+        }
+    }
+
+
 
     .logo {
         border-radius: 50%;
@@ -50,6 +64,24 @@ body{
         color: $white;
 
         .frailes {
+            color: $verde;
+        }
+    }
+
+    .login {
+        background-color: $verde;
+        color: $white;
+
+        border-radius: 0.375rem;
+
+         
+    &:focus{
+   
+        box-shadow: none; 
+    }
+
+        &:hover {
+            background-color: $white;
             color: $verde;
         }
     }
