--- a/ui/src/components/footer.html
+++ b/ui/src/components/footer.html
@@ -6,27 +6,53 @@
             </div>
 
             <div class="footer__widget">
-                <h3 class="footer__heading fw-bold fs-2">Gimnasio</h3>
+                <h3 class="footer__heading fw-bold fs-2">
+                    <i class="bi bi-house-door"></i> Gimnasio
+                </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="#">Horarios</a>
-                    <a class="footer__link" href="#">Entrenadores</a>
-                    <a class="footer__link" href="#">Instalaciones</a>
+                    <a class="footer__link" href="/ui/src/pages/horarios.html">
+                        <i class="bi bi-clock"></i> Horarios
+                    </a>
+                    <a class="footer__link" href="/ui/src/pages/entrenadores.html">
+                        <i class="bi bi-person-fill"></i> Entrenadores
+                    </a>
+                    <a class="footer__link" href="/ui/src/pages/instalaciones.html">
+                        <i class="bi bi-building"></i> Instalaciones
+                    </a>
                 </nav>
             </div>
+
             <div class="footer__widget">
-                <h3 class="footer__heading fw-bold fs-2">Nosotros</h3>
+                <h3 class="footer__heading fw-bold fs-2">
+                    <i class="bi bi-info-circle"></i> Nosotros
+                </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="#">Rutinas</a>
-                    <a class="footer__link" href="#">contacto</a>
-                    
+                    <a class="footer__link" href="/ui/src/pages/rutinas.html">
+                        <i class="bi bi-list-check"></i> Rutinas
+                    </a>
+                    <a class="footer__link" href="/ui/src/pages/contacto.html">
+                        <i class="bi bi-envelope-fill"></i> Contacto
+                    </a>
+                    <a class="footer__link" href="/ui/index.html">
+                        <i class="bi bi-house-door-fill"></i> Inicio
+                    </a>
                 </nav>
             </div>
+
             <div class="footer__widget">
-                <h3 class="footer__heading fw-bold fs-2">Tienda</h3>
+                <h3 class="footer__heading fw-bold fs-2">
+                    <i class="bi bi-bag-fill"></i> Tienda
+                </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="#">Suplementación</a>
-                    <a class="footer__link" href="#">Merchandising</a>
-                    <a class="footer__link" href="#">Instagram</a>
+                    <a class="footer__link" href="/ui/src/pages/suplementacion.html">
+                        <i class="bi bi-cup-straw"></i> Suplementación
+                    </a>
+                    <a class="footer__link" href="/ui/src/pages/merchandising.html">
+                        <i class="bi bi-gift"></i> Merchandising
+                    </a>
+                    <a class="footer__link" href="https://www.instagram.com/frailesfit/">
+                        <i class="bi bi-instagram"></i> Instagram
+                    </a>
                 </nav>
             </div>
         </div>
