--- a/ui/src/components/modalGaleria.html
+++ b/ui/src/components/modalGaleria.html
@@ -5,7 +5,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
             </div>
             <div class="modal-body text-center">
-                <img id="modalImage" src="" class="img-fluid">
+                <img id="modalImage" src="" class="img-fluid"> <!-- aqui va la imagen -->
             </div>
         </div>
     </div>
