--- a/ui/src/scss/ui/_footer.scss
+++ b/ui/src/scss/ui/_footer.scss
@@ -50,12 +50,14 @@
     }
 
     &__heading {
-        color: $dark;
+        color: $verde;
+        text-align: center;
     }
 
   
 
     &__link {
+        text-align: center;
         color: $white;
         text-decoration: none;
         display: block;
