UI | Rework Project Routing and GulpFile

--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -16,19 +16,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/ui/index.html">Inicio</a>
+                            <a class="nav-link active" href="/ui/build/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/src/pages/rutinas.html">Rutinas</a>
+                            <a class="nav-link" href="">Rutinas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/src/pages/entrenadores.html">Entrenadores</a>
+                            <a class="nav-link" href="/ui/build/pages/entrenadores.html">Entrenadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/src/pages/horarios.html">Horarios</a>
+                            <a class="nav-link" href="/ui/build/pages/horarios.html">Horarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/src/pages/instalaciones.html">Instalaciones</a>
+                            <a class="nav-link" href="/ui/build/pages/instalaciones.html">Instalaciones</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -36,12 +36,12 @@
                                 Tienda
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/ui/src/pages/suplementacion.html">Suplementación</a></li>
-                                <li><a class="dropdown-item" href="/ui/src/pages/merchandising.html">Merchandising</a></li>
+                                <li><a class="dropdown-item" href="/ui/build/pages/suplementacion.html">Suplementación</a></li>
+                                <li><a class="dropdown-item" href="/ui/build/pages/merchandising.html">Merchandising</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/src/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="/ui/build/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
 
@@ -70,7 +70,7 @@
                                         class="btn btn-danger">Cerrar</button>
                                 </div>
                                 <div class="text-center mt-3">
-                                    <a href="registro.html">¿No tienes cuenta? Regístrate aquí</a>
+                                    <a href="#">¿No tienes cuenta? Regístrate aquí</a>
                                 </div>
                             </div>
                         </div>
