--- a/ui/src/components/footer.html
+++ b/ui/src/components/footer.html
@@ -2,7 +2,7 @@
     <div class="footer__container">
         <div class="footer__row">
             <div class="footer__widget">
-                <img class="footer__logo" src="/ui/build/img/FrailesFitLogo.avif" alt="Logo">
+                <img class="footer__logo" src="https://i.postimg.cc/HnxRPCmZ/Frailes-Fit-Logo.png" alt="Logo">
             </div>
 
             <div class="footer__widget">
