--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -3,7 +3,7 @@
         <nav class="navbar justify-content-between navbar-expand-lg navbar-dark slide">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logo img-fluid" src="./src/img/FrailesFitLogo.avif" alt="Logo del Gimnasio">
+                    <img class="logo img-fluid" src="https://i.postimg.cc/HnxRPCmZ/Frailes-Fit-Logo.png" alt="Logo del Gimnasio">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
@@ -15,19 +15,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/ui/build/index.html">Inicio</a>
+                            <a class="nav-link active" href="../../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/build/pages/rutinas.html">Rutinas</a>
+                            <a class="nav-link" href="../pages/rutinas.html">Rutinas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/build/pages/entrenadores.html">Entrenadores</a>
+                            <a class="nav-link" href="../pages/entrenadores.html">Entrenadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/build/pages/horarios.html">Horarios</a>
+                            <a class="nav-link" href="../pages/horarios.html">Horarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/build/pages/instalaciones.html">Instalaciones</a>
+                            <a class="nav-link" href="../pages/instalaciones.html">Instalaciones</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -36,13 +36,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="/ui/build/pages/suplementacion.html">Suplementación</a></li>
-                                <li><a class="dropdown-item" href="/ui/build/pages/merchandising.html">Merchandising</a>
+                                        href="../pages/suplementacion.html">Suplementación</a></li>
+                                <li><a class="dropdown-item" href="../pages/merchandising.html">Merchandising</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/ui/build/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
 
