--- a/ui/src/components/servicios.html
+++ b/ui/src/components/servicios.html
@@ -6,7 +6,7 @@
         <!-- Tarjeta 1 -->
         <div class="col-md-6 col-12 mb-4">
             <div class="card border-0 rounded zoom-hover">
-                <img src="/ui/build/img/horario.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
+                <img src="https://i.postimg.cc/vZSJ9ktG/horario.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Nuestros Horarios</p>
                 </div>
@@ -16,7 +16,7 @@
         <!-- Tarjeta 2 -->
         <div class="col-md-6 col-12 mb-4">
             <div class="card border-0 rounded zoom-hover">
-                <img src="/ui/build/img/reglas.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                <img src="https://i.postimg.cc/kXy9VTH5/reglas.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Nuestras Reglas</p>
                 </div>
