--- a/ui/src/scss/ui/_footer.scss
+++ b/ui/src/scss/ui/_footer.scss
@@ -3,7 +3,7 @@
 
 
 .footer {
-    @include m.background-image('../../build/img/Maquinas6.avif');
+    @include m.background-image('https://i.postimg.cc/Pqbqd1DG/img_(64).jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
