--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -3,12 +3,12 @@
 
 
 body {
-    background-image: url(../../src/img/trama.avif)
+    background-image: url(https://i.postimg.cc/wB1SVz6w/img-1.avif)
 }
 
 
 .header {
-    @include m.background-image('../../src/img/Maquinas1.avif');
+    @include m.background-image('https://i.postimg.cc/YCdHR8QC/img-33.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
