--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -15,19 +15,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../../index.html">Inicio</a>
+                            <a class="nav-link active" href="/build/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/rutinas.html">Rutinas</a>
+                            <a class="nav-link" href="./src/pages/rutinas.html">Rutinas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/entrenadores.html">Entrenadores</a>
+                            <a class="nav-link" href="./src/pages/entrenadores.html">Entrenadores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/horarios.html">Horarios</a>
+                            <a class="nav-link" href="./src/pages/horarios.html">Horarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/instalaciones.html">Instalaciones</a>
+                            <a class="nav-link" href="./src/pages/instalaciones.html">Instalaciones</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
@@ -36,13 +36,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item"
-                                        href="../pages/suplementacion.html">Suplementación</a></li>
+                                        href="./src/pages/suplementacion.html">Suplementación</a></li>
                                 <li><a class="dropdown-item" href="../pages/merchandising.html">Merchandising</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./src/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
 
