--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -15,10 +15,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/ui/build/index.html">Inicio</a>
+                            <a class="nav-link active" href="/index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/build/src/pages/rutinas.html">Rutinas</a>
+                            <a class="nav-link" href="src/pages/rutinas.html">Rutinas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./src/pages/entrenadores.html">Entrenadores</a>
