--- a/ui/src/components/entrenador.html
+++ b/ui/src/components/entrenador.html
@@ -4,7 +4,7 @@
             <div class="card entrenador-card shadow-lg zoom-hover">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex justify-content-center align-items-center">
-                        <img src="/ui/build/img/Entrenador.avif" alt="Entrenador" class="img-fluid p-2 entrenador-img">
+                        <img src="https://i.postimg.cc/ZR32GLv3/img-45.jpg" alt="Entrenador" class="img-fluid p-2 entrenador-img">
                     </div>
                     <div class="col-md-8 ">
                         <div class="card-body">
