--- a/ui/src/components/gym.html
+++ b/ui/src/components/gym.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/gym3.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
+                    <img src="https://i.postimg.cc/4d8VNvT2/gym3.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Abierto de Lunes a Viernes.</p>
@@ -19,7 +19,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/gym4.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/hv6mVSv9/gym4.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Consulta nuestros horarios.</p>
@@ -31,7 +31,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Maquinas7.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/h4bNMf1y/Maquinas7.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Consulta nuestras normas</p>
