--- a/ui/src/components/muro.html
+++ b/ui/src/components/muro.html
@@ -4,7 +4,7 @@
             <div class="card entrenador-card shadow-lg zoom-hover">
                 <div class="row g-0">
                     <div class="col-md-4 d-flex justify-content-center align-items-center">
-                        <img src="/ui/build/img/Muro.avif" alt="Entrenador" class="img-fluid p-2 entrenador-img">
+                        <img src="https://i.postimg.cc/Jn1z0t3s/img_(67).jpg" alt="Entrenador" class="img-fluid p-2 entrenador-img">
                     </div>
                     <div class="col-md-8 d-flex align-items-center">
                         <div class="card-body text-start">
