--- a/ui/src/components/pabellon.html
+++ b/ui/src/components/pabellon.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/pabellon.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
+                    <img src="https://i.postimg.cc/nh87zc6x/pabellon.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Abierto 24horas, 7 días a la semana, Gratis.</p>
@@ -19,7 +19,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/pabellon5.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/fRxd0QN9/pabellon5.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">¡Cuida las instalaciones!</p>
@@ -31,7 +31,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/pabellon3.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/nLpD4SFw/pabellon3.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Reserva en el horario de apertura del gimnasio.</p>
