--- a/ui/src/components/padel.html
+++ b/ui/src/components/padel.html
@@ -7,7 +7,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/padel5.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
+                    <img src="https://i.postimg.cc/Z5F95P8P/padel5.avif" class="card-img-top rounded" alt="Imagen Servicio 1">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Abierto 24horas, 7 días a la semana.</p>
@@ -19,7 +19,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/padel3.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/d3b7L4N6/padel3.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Dia 12 € / Noches 15 €.</p>
@@ -31,7 +31,7 @@
         <div class="col-md-4 col-12 mb-4">
             <div class="card border-0 rounded">
                 <div class="zoom">
-                    <img src="/ui/build/img/Instalaciones/padel6.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
+                    <img src="https://i.postimg.cc/YqFGJBjs/padel6.avif" class="card-img-top rounded" alt="Imagen Servicio 2">
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text fw-bold">Reserva en el horario de apertura del gimnasio.</p>
