--- a/ui/src/components/merch.html
+++ b/ui/src/components/merch.html
@@ -10,13 +10,13 @@
                 <div id="carouselPrenda1" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/ui/build/img/merchan/prenda1.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1">
+                            <img src="https://i.postimg.cc/7ZyG4t2Y/prenda1.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1">
                         </div>
                         <div class="carousel-item">
-                            <img src="/ui/build/img/merchan/prenda1b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1 - Variante">
+                            <img src="https://i.postimg.cc/1zm8ngBk/prenda1b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 1 - Variante">
                         </div>
                         <div class="carousel-item">
-                            <img src="/ui/build/img/merchan/prenda1Modelo.avif" class="d-block w-100 rounded" alt="Prenda 1 en Modelo">
+                            <img src="https://i.postimg.cc/ZR00H11j/prenda1Modelo.avif" class="d-block w-100 rounded" alt="Prenda 1 en Modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda1" data-bs-slide="prev">
@@ -48,13 +48,13 @@
                 <div id="carouselPrenda2" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/ui/build/img/merchan/prenda2.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2">
+                            <img src="https://i.postimg.cc/LsxnzH0n/prenda2.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2">
                         </div>
                         <div class="carousel-item">
-                            <img src="/ui/build/img/merchan/prenda2b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2 - Variante">
+                            <img src="https://i.postimg.cc/Jng02p88/prenda2b.avif" class="d-block w-100 rounded" alt="Imagen de Prenda 2 - Variante">
                         </div>
                         <div class="carousel-item">
-                            <img src="/ui/build/img/merchan/prenda2Modelo.avif" class="d-block w-100 rounded" alt="Prenda 2 en Modelo">
+                            <img src="https://i.postimg.cc/3NvN52rv/prenda2Modelo.avif" class="d-block w-100 rounded" alt="Prenda 2 en Modelo">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrenda2" data-bs-slide="prev">
