--- a/ui/src/components/footer.html
+++ b/ui/src/components/footer.html
@@ -10,13 +10,13 @@
                     <i class="bi bi-house-door"></i> Gimnasio
                 </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="src/pages/horarios.html">
+                    <a class="footer__link" href="/src/pages/horarios.html">
                         <i class="bi bi-clock"></i> Horarios
                     </a>
-                    <a class="footer__link" href="src/pages/entrenadores.html">
+                    <a class="footer__link" href="/src/pages/entrenadores.html">
                         <i class="bi bi-person-fill"></i> Entrenadores
                     </a>
-                    <a class="footer__link" href="src/pages/instalaciones.html">
+                    <a class="footer__link" href="/src/pages/instalaciones.html">
                         <i class="bi bi-building"></i> Instalaciones
                     </a>
                 </nav>
@@ -27,10 +27,10 @@
                     <i class="bi bi-info-circle"></i> Nosotros
                 </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="src/pages/rutinas.html">
+                    <a class="footer__link" href="/src/pages/rutinas.html">
                         <i class="bi bi-list-check"></i> Rutinas
                     </a>
-                    <a class="footer__link" href="src/pages/contacto.html">
+                    <a class="footer__link" href="/src/pages/contacto.html">
                         <i class="bi bi-envelope-fill"></i> Contacto
                     </a>
                     <a class="footer__link" href="/index.html">
@@ -44,10 +44,10 @@
                     <i class="bi bi-bag-fill"></i> Tienda
                 </h3>
                 <nav class="footer_nav">
-                    <a class="footer__link" href="src/pages/suplementacion.html">
+                    <a class="footer__link" href="/src/pages/suplementacion.html">
                         <i class="bi bi-cup-straw"></i> Suplementación
                     </a>
-                    <a class="footer__link" href="src/pages/merchandising.html">
+                    <a class="footer__link" href="/src/pages/merchandising.html">
                         <i class="bi bi-gift"></i> Merchandising
                     </a>
                     <a class="footer__link" href="https://www.instagram.com/frailesfit/">
