--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -89,7 +89,7 @@
 
 
     <div class="container-xl mt-5 text-center slide-derecha">
-        <h3 class="heading fs-1 ">
+        <h3 class="heading fs-1 d-none d-md-block">
             ¡Lleva tu entrenamiento al siguiente nivel en <span class="fw-bold frailes">Frailes<span
                     class="text-white">Fit</span></span>!
         </h3>
