Routing and GulpFile Final

--- a/ui/src/components/galeria.html
+++ b/ui/src/components/galeria.html
@@ -37,15 +37,17 @@
                 <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" data-src="https://i.postimg.cc/jqBCQqtF/img_(9).jpg" alt="imagen galeria">
             </a>
         </li>
+        
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente27">
-                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/65RqHsQ5/img-12.jpg" data-src="https://i.postimg.cc/65RqHsQ5/img-12.jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable" src="https://i.postimg.cc/d10z9mdb/imag-74.avif" data-src="https://i.postimg.cc/d10z9mdb/imag-74.avif" alt="imagen galeria">
             </a>
         </li>
+
         <li class="col-md-6 col-lg-4">
             <a data-bs-toggle="modal" data-bs-target="#modalGaleria" data-bs-imagen="cliente39">
-                <img class="img-fluid my-3 img-clickable d-md-none d-lg-block" src="https://i.postimg.cc/4y0fW5Dc/img_(69).jpg"
-                data-src="https://i.postimg.cc/4y0fW5Dc/img_(69).jpg" alt="imagen galeria">
+                <img class="img-fluid my-3 img-clickable d-md-none d-lg-block" src="https://i.postimg.cc/65RqHsQ5/img-12.jpg"
+                data-src="https://i.postimg.cc/65RqHsQ5/img-12.jpg" alt="imagen galeria">
             </a>
         </li>
     </ul>
