--- a/ui/src/scss/ui/_header.scss
+++ b/ui/src/scss/ui/_header.scss
@@ -63,11 +63,21 @@ body {
 
     .heading {
         color: $white;
-
+        font-size: 1rem !important; 
+    
+        @media (min-width: 768px) {
+            font-size: 1.5rem !important; 
+        }
+    
+        @media (min-width: 1024px) {
+            font-size: 2.2rem !important; 
+        }
+    
         .frailes {
             color: $verde;
         }
     }
+    
 
     .login {
         background-color: $verde;
