--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -3,7 +3,8 @@
         <nav class="navbar justify-content-between navbar-expand-lg navbar-dark slide">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logo img-fluid" src="https://i.postimg.cc/HnxRPCmZ/Frailes-Fit-Logo.png" alt="Logo del Gimnasio">
+                    <img class="logo img-fluid" src="https://i.postimg.cc/HnxRPCmZ/Frailes-Fit-Logo.png"
+                        alt="Logo del Gimnasio">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
@@ -11,7 +12,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
- 
+
                 <div class="collapse navbar-collapse justify-content-end" id="navbarScroll">
                     <ul class="navbar-nav my-2 my-lg-0 text-center navbar-nav-scroll">
                         <li class="nav-item">
@@ -35,8 +36,8 @@
                                 Tienda
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item"
-                                        href="/src/pages/suplementacion.html">Suplementación</a></li>
+                                <li><a class="dropdown-item" href="/src/pages/suplementacion.html">Suplementación</a>
+                                </li>
                                 <li><a class="dropdown-item" href="/src/pages/merchandising.html">Merchandising</a>
                                 </li>
                             </ul>
@@ -48,36 +49,7 @@
 
 
 
-                    <button type="button" class="btn fw-bold px-5 login" data-bs-toggle="modal" data-bs-target="#modal">
-                        Login
-                    </button>
-
-                    <!-- Modal -->
-                    <div id="modal" class="modal fade" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h2 class="modal-title" id="modalLabel">Login</h2>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <!-- Aquí puedes agregar el formulario de login -->
-                                </div>
-                                <div class="modal-footer">
-                                    <button class="btn btn-primary" type="submit">
-                                        <i class="bi bi-plus-circle-fill"></i> Registrar Cliente
-                                    </button>
-                                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-                                </div>
-                                <div class="text-center mt-3">
-                                    <a href="#">¿No tienes cuenta? Regístrate aquí</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
+                    <a href="/src/pages/login.html" class="btn fw-bold px-5 login">Login</a>
 
 
                 </div>
@@ -88,7 +60,7 @@
     </div>
 
 
-    <div class="container-xl mt-5 text-center slide-derecha">
+    <div class="container-xl mt-1 text-center slide-derecha">
         <h3 class="heading fs-1 ">
             ¡Lleva tu entrenamiento al siguiente nivel en <span class="fw-bold frailes">Frailes<span
                     class="text-white">Fit</span></span>!
