--- a/ui/src/components/header.html
+++ b/ui/src/components/header.html
@@ -1,5 +1,17 @@
 <header class="py-5 header">
     <div class="container-xl">
+
+        <!-- Barra de usuario y carrito -->
+        <div class="user-cart-bar d-flex justify-content-between my-4 align-items-center py-2 text-white">
+            <span class="user-name ms-3">Bienvenido, <span id="username">Usuario</span>
+            <button id="logout-btn" class="btn logout ms-3">Cerrar sesión</button></span>
+            <!-- Botón para cerrar sesión -->
+           
+            <a href="/src/pages/carrito.html" class="cart-icon me-3">
+                <i class="fas fa-shopping-cart"></i>
+            </a>
+        </div>
+
         <nav class="navbar justify-content-between navbar-expand-lg navbar-dark slide">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
