--- a/ui/src/components/log.html
+++ b/ui/src/components/log.html
@@ -2,18 +2,20 @@
     <div class="col-md-6 h-100 login">
         <form class="needs-validation p-4 shadow formulario" novalidate>
             <fieldset>
-                <legend class="text-center fs-2 fw-bold py-2 rounded headerForm"><img class="img-fluid login-logo" src="https://i.postimg.cc/HnxRPCmZ/FrailesFitLogo.png" alt="logo"></legend>
+                <legend class="text-center fs-2 fw-bold py-2 rounded headerForm">
+                    <img class="img-fluid login-logo" src="https://i.postimg.cc/HnxRPCmZ/FrailesFitLogo.png" alt="logo">
+                </legend>
 
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="email">Email:</label>
-                    <input type="email" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="email" class="form-control  fs-6 border border-secondary formulario-input"
                         id="email" placeholder="Tu email" required>
                     <span class="invalid-feedback">Introduce un email válido.</span>
                 </div>
 
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="password">Contraseña:</label>
-                    <input type="password" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="password" class="form-control  fs-6 border border-secondary formulario-input"
                         id="password" placeholder="Tu contraseña" required>
                     <span class="invalid-feedback">Introduce tu contraseña.</span>
                 </div>
@@ -28,16 +30,16 @@
 
             <div class="d-flex justify-content-center gap-3">
                 <input class="btn formBtn login-btn fw-bold px-2 mt-2 py-2" type="submit" value="Iniciar Sesión">
-                
                 <a href="/index.html" class="btn login-btn fw-bold px-2 mt-2 py-2">Volver al Inicio</a>
             </div>
-            
-            
 
             <div class="text-center mt-3">
-                <a class="enlace text-decoration-none credenciales fw-bold" href="#">¿Olvidaste tu contraseña?</a> | 
+                <a class="enlace text-decoration-none credenciales fw-bold" href="#">¿Olvidaste tu contraseña?</a> |
                 <a class="enlace text-decoration-none credenciales fw-bold" href="../pages/registro.html">Registrarse</a>
             </div>
         </form>
     </div>
 </section>
+
+<script src="../../js/login.js"></script>
+</body>
