--- a/ui/src/components/reg.html
+++ b/ui/src/components/reg.html
@@ -9,7 +9,7 @@
                 <!-- Campo Nombre -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="nombre">Nombre:</label>
-                    <input type="text" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="text" class="form-control  fs-6 border border-secondary formulario-input"
                         id="nombre" placeholder="Tu nombre" required>
                     <span class="invalid-feedback">Introduce tu nombre.</span>
                 </div>
@@ -17,7 +17,7 @@
                 <!-- Campo Apellidos -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="apellidos">Apellidos:</label>
-                    <input type="text" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="text" class="form-control  fs-6 border border-secondary formulario-input"
                         id="apellidos" placeholder="Tus apellidos" required>
                     <span class="invalid-feedback">Introduce tus apellidos.</span>
                 </div>
@@ -25,7 +25,7 @@
                 <!-- Campo Dirección -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="direccion">Dirección:</label>
-                    <input type="text" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="text" class="form-control  fs-6 border border-secondary formulario-input"
                         id="direccion" placeholder="Tu dirección" required>
                     <span class="invalid-feedback">Introduce tu dirección.</span>
                 </div>
@@ -33,7 +33,7 @@
                 <!-- Campo Teléfono -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="telefono">Teléfono:</label>
-                    <input type="tel" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="tel" class="form-control  fs-6 border border-secondary formulario-input"
                         id="telefono" placeholder="Tu teléfono" required>
                     <span class="invalid-feedback">Introduce tu teléfono.</span>
                 </div>
@@ -41,7 +41,7 @@
                 <!-- Campo DNI -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="dni">DNI:</label>
-                    <input type="text" class="form-control p-3 fs-4 border border-secondary formulario-input" id="dni"
+                    <input type="text" class="form-control  fs-6 border border-secondary formulario-input" id="dni"
                         placeholder="Tu DNI" required>
                     <span class="invalid-feedback">Introduce tu DNI.</span>
                 </div>
@@ -49,7 +49,7 @@
                 <!-- Campo Edad -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="edad">Edad:</label>
-                    <input type="number" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="number" class="form-control  fs-6 border border-secondary formulario-input"
                         id="edad" placeholder="Tu edad" required>
                     <span class="invalid-feedback">Introduce tu edad.</span>
                 </div>
@@ -57,9 +57,17 @@
                 <!-- Campo Email -->
                 <div class="mb-3">
                     <label class="label-title form-label fw-bold" for="email">Email:</label>
-                    <input type="email" class="form-control p-3 fs-4 border border-secondary formulario-input"
+                    <input type="email" class="form-control  fs-6 border border-secondary formulario-input"
                         id="email" placeholder="Tu email" required>
                     <span class="invalid-feedback">Introduce un email válido.</span>
+                </div>
+
+                <!-- Campo Contraseña -->
+                <div class="mb-3">
+                    <label class="label-title form-label fw-bold" for="password">Contraseña:</label>
+                    <input type="password" class="form-control  fs-6 border border-secondary formulario-input"
+                        id="password" placeholder="Tu contraseña" required>
+                    <span class="invalid-feedback">Introduce una contraseña.</span>
                 </div>
 
             </fieldset>
@@ -68,8 +76,15 @@
             <div class="d-flex justify-content-center gap-3">
                 <input class="btn formBtn login-btn fw-bold px-2 mt-2 py-2" type="submit" value="Registrar">
 
+
+
                 <a href="/index.html" class="btn login-btn fw-bold px-2 mt-2 py-2">Volver al Inicio</a>
             </div>
         </form>
+
+        <div id="message" class="alert alert-success mt-4 fw-bold" role="alert" style="display: none;">
+            ¡Registro exitoso! Revisa tu correo para confirmar tu cuenta.
+        </div>
+
     </div>
 </section>
