--- a/ui/src/components/admin.html
+++ b/ui/src/components/admin.html
@@ -21,4 +21,11 @@
             </tbody>
         </table>
     </div>
+
+    <div class="d-flex justify-content-center mb-4">
+        <a href="panelAdmin.html" class="btn btn-secondary btn-lg">
+          <i class="fas fa-arrow-left"></i> Volver al Panel
+        </a>
+      </div>
+      
 </section>
