--- a/ui/src/components/pagos.html
+++ b/ui/src/components/pagos.html
@@ -6,7 +6,7 @@
             <thead class="table-dark">
                 <tr>
                     <th>Email</th>
-                    <th>Mes/Año</th> 
+                    <th>Mes/Año</th>
                     <th>Nombre</th>
                     <th>Apellidos</th>
                     <th>Mes</th>
@@ -23,4 +23,11 @@
             </tbody>
         </table>
     </div>
+
+    <div class="d-flex justify-content-center mb-4">
+        <a href="panelAdmin.html" class="btn btn-secondary btn-lg">
+          <i class="fas fa-arrow-left"></i> Volver al Panel
+        </a>
+      </div>
+      
 </section>
